fixed whitespace

--- a/styles.css
+++ b/styles.css
@@ -10,154 +10,167 @@ My Colour Palette
 
 /* Global Styles */
 
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+}
+
 body {
-    background-color: #f2f2f2;
-    color: black;
-    font-family: sans-serif;        
+  background-color: #f2f2f2;
+  color: black;
+  font-family: sans-serif;
 }
 
 /* Navbar */
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: black;
-    overflow: hidden;
+  background-color: black;
+  overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #f2f2f2;
-    color: black;
+  background-color: #f2f2f2;
+  color: black;
 }
 
 /* Add an active class to highlight the current page */
 .active {
-    background-color: #590202;
-    color: #f2f2f2;
+  background-color: #590202;
+  color: #f2f2f2;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
-    display: none;
-} 
+  display: none;
+}
 
- /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
- @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none;
   }
-  
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  } 
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 
 /* Projects */
 
 .myProjects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
 }
 
 .proj {
-    background: #023059;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 150px 1fr;
-    grid-gap: 10px;
-    align-items: center;
-    color: #f2f2f2;
+  background: #023059;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  grid-gap: 10px;
+  align-items: center;
+  color: #f2f2f2;
 }
 
 .proj__artwork {
-    width: 100%;
+  width: 100%;
 }
 
 .proj:hover {
-    opacity: 0.75;
+  opacity: 0.75;
 }
 
 /* Contact me form */
 
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #f2f2f2;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #f2f2f2;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-input[type=submit] {
-    background-color: #590202;
-    color: #f2f2f2;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+input[type="submit"] {
+  background-color: #590202;
+  color: #f2f2f2;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-input[type=submit]:hover {
-    background-color: #590202;
+input[type="submit"]:hover {
+  background-color: #590202;
 }
 
 /* Social Media */
 
 .fa-facebook-square {
-    font-size: 2.5em;
-    color: black;
+  font-size: 2.5em;
+  color: black;
 }
 
 .fa-github-square {
-    font-size: 2.5em;
-    color: black;
+  font-size: 2.5em;
+  color: black;
 }
 
 .fa-linkedin {
-    font-size: 2.5em;
-    color: black;
+  font-size: 2.5em;
+  color: black;
 }
 
 .fa-html5 {
-    font-size: 2em;
-    padding: 3px;
+  font-size: 2em;
+  padding: 3px;
 }
 
-.fa-css3-alt{
-    font-size: 2em;
-    padding: 3px;
+.fa-css3-alt {
+  font-size: 2em;
+  padding: 3px;
 }
 
 .fa-js-square {
-    font-size: 2em;
-    padding: 3px;
+  font-size: 2em;
+  padding: 3px;
 }
 
 /* Media Queires */
